--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "ai": "^2.1.22",
+    "annyang": "^2.6.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
@@ -23,6 +28,8 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-textarea-autosize": "^8.5.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
